<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fire-Alert Mobile Inspection</string>
    <string name="Select">Select User</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add User</string>
    <string name="action_edit">Edit User</string>
    <string name="action_delete">Delete User</string>
    <string name="hello_world">Hello world!</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="LoginPageTitle">System Login</string>
    <string name="LoginPageUsername">Username</string>
    <string name="LoginPagePassword">Password</string>
    <string name="LoginPageButton">Login</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="MainMenuTitle">Welcome</string>
    <string name="title_activity_clients_page">Inspection Directory</string>
    <string name="MainMenuClientButton">View Clients</string>
    <string name="MainMenuScan">Scan Equipment</string>
    <string name="title_activity_scan">Scan Equipment</string>
    <string name="ScanManualEnterTitle">Enter Equipment ID:</string>
    <string name="CheckBoxString">Save Information</string>
    <string name="title_activity_manage_user_accounts">Manage User Accounts</string>
    <string name="PasswordVarificatoin">Re-enter password for verification</string>
    <string name="CreateUserAccount">Save User Account</string>
    <string name="title_activity_equipment_view">Equipment Inspection Report</string>
    <string name="EquipmentViewRecordButton">Record Results</string>
    <string name="MainMenuSendButton">Send Results</string>
    <string name="title_activity_client_info_page">Contract Directory</string>
    <string name="ContractTermsButton">Terms</string>
    <string name="title_activity_show_user_accounts">ShowUserAccounts</string>
    <string name="title_activity_select_user">Account Management</string>

</resources>
