<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <TextView
        android:id="@+id/tvMainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/MainMenuTitle"
        android:textSize="@dimen/PageTitle" />

        <Button
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnClients"
            android:layout_alignRight="@+id/btnClients"
            android:layout_below="@+id/btnClients"
            android:onClick="OnClickScan"
            android:text="@string/MainMenuScan"
            android:textSize="@dimen/main_menu_buttons_text_size" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnScan"
            android:layout_alignRight="@+id/btnScan"
            android:layout_below="@+id/btnScan"
            android:onClick="OnClickManageAccounts"
            android:text="@string/title_activity_manage_user_accounts"
            android:textSize="@dimen/main_menu_buttons_text_size" />

        <Button
            android:id="@+id/btnClients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvMainMenuTitle"
            android:layout_below="@+id/tvMainMenuTitle"
            android:layout_marginTop="46dp"
            android:onClick="OnClickClients"
            android:text="@string/MainMenuClientButton"
            android:textSize="@dimen/main_menu_buttons_text_size" />

        <Button
            android:id="@+id/btnSendResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createAccount"
            android:layout_alignRight="@+id/createAccount"
            android:layout_below="@+id/createAccount"
            android:layout_marginTop="66dp"
            android:text="@string/MainMenuSendButton"
            android:textSize="@dimen/main_menu_buttons_text_size" />

</RelativeLayout>
